A variety of small updates to the poster biography

--- a/bio-2017-08-29.md
+++ b/bio-2017-08-29.md
@@ -1,8 +1,13 @@
 A biography, of sorts
 =====================
 
-_Part of the implicit series "Sam muses about writing he had to do
-anyway and includes that writing"._
+I wasn't going to post this today, but it makes the numbering of
+[the subsequent musing](thirty-years) much nicer.
+
+_Part of the implicit series "Sam posts other things he's written and
+then muses about them."_
+
+---
 
 When you enter Grinnell's CS department from the east end of the corridor,
 you'll see a poster that has pictures and short biographies of all of the
@@ -11,7 +16,7 @@ a bit, we have the opportunity to update our biographies each year.  I haven't
 updated mine in a while [1] and it's dated enough that I thought I should
 make some changes.  I also think mine was too long, so I'm trying to cut
 it down.  Oh, it also appears that I'm the only one in the department who hasn't
-provided our ASA with a bio, so I guess I should do so now.
+provided our ASA [2] with a bio, so I guess I should do so now.
 
 Here goes.  We'll start with the old version.
 
@@ -62,9 +67,9 @@ the arts, coding for social good, and coding for digital humanities.
 
 Definitely too long.  Way too long.  And a bit dated.  If it suggests
 that I just started "Learning from Alumni" and "[Thinking in C and
-Unix](index-cnix)" [2], that means it's been four or five years since I've
+Unix](index-cnix)" [3], that means it's been four or five years since I've
 changed it.  "Intersectionality" is an inappropriate word, even though
-the things I do are at the intersection of multiple identities [3,4].
+the things I do are at the intersection of multiple identities [4,5].
 
 What do I want in the new one?  I should mention MIST.  I should mention
 the outreach camps, since they occupy a good deal of my time.  And I
@@ -104,12 +109,14 @@ Let's hope that I'll get next year's revision done earlier.
 
 [1] Whoops.
 
-[2] A.k.a., "Don't embarrass me, don't embarrass yourself."
+[2] Academic Support Assistant, if you have not been keeping track.
 
-[3] What was I thinking?
+[3] A.k.a., "Don't embarrass me, don't embarrass yourself."
 
-[4] And why hasn't anyone called me out on it?
+[4] What was I thinking?
+
+[5] And why hasn't anyone called me out on it?
 
 ---
 
-*Version 1.0 of 2017-08-30.*
+*Version 1.0.2 of 2017-08-29.*
