--- a/short-bio-2018-05-03.md
+++ b/short-bio-2018-05-03.md
@@ -3,24 +3,27 @@ A short biography
 
 *Topics/tags: [Autobiographical](index-autobiographical), short, things I had to write anyway*
 
-Once in a while, I get asked to write about myself.  This time, I think I
-accidentally agreed to be on a panel at Alumni College [1] and they felt
-like they should have something better than what I put on the College's
-Web site [2].  But what goes in a short biography?  For Grinnell, I consider
-it important to include my honorary membership in two different classes:
-the class of 2001, which is "my" class because I started at the same time
-they did [3], and the class of 2017, which included at two graduates who
-I've known since childhood.  Broadening participation in computing is a
-key aspect of what I do, so it belongs there.  And I suppose I should
-say something about my scholarship and professional responsibilities.
+Once in a while, I get asked to write about myself.  For example,
+this past fall, I had to write [a biography for a poster in the
+department](bio-2017-08-29).  This week, I got asked to write a shorter 
+biography [1].  Why? I accidentally agreed to be on a panel at Alumni College
+[2] and they felt like they should have something better than what I
+put on the College's Web site [3].  But what goes in a short biography?
+For Grinnell, I consider it important to include my honorary membership
+in two different classes: the class of 2001, which is "my" class
+because I started at the same time they did [4], and the class of
+2017, which included at least two graduates who I've known since
+childhood.  Broadening participation in computing is a key aspect of
+what I do, so it belongs there.  And I suppose I should say something
+about my scholarship and professional responsibilities [8].
 
 I also find myself wondering how I should refer to myself in a biography.
 I don't really like to use the name "Sam" in print since it encourages
 people to refer then list me as "Sam Rebelsky", which I *really* dislike
-[6].   I sometimes try the casual "SamR", but it usually doesn't work
+[9].   I sometimes try the casual "SamR", but it usually doesn't work
 for more than a sentence or two.  "Professor Rebelsky" feels ostentatious 
-[7].  "Samuel" is a bit long and it's not how most people refer to me.
-So I end up with "Rebelsky" [8].  It's not perfect, but it suffices.
+[10].  "Samuel" is a bit long and it's not how most people refer to me.
+So I end up with "Rebelsky" [11].  It's not perfect, but it suffices.
 
 Here's what I sent.
 
@@ -42,66 +45,82 @@ Machinery (ACM) Special Interest Group in Computers and Society, as a
 member of the ACM Committee on Professional Ethics, and as list manager
 for the ACM Special Interest Group in Computer Science Education.
 
-What was that comment?  "It's not perfect, but it suffices."  Does it?
-I don't mention most of my service at Grinnell.  "Rebelsky serves
-on the boards of the Wilson Center for Leadership and Innovation,
+What was that comment I just made?  "It's not perfect, but it suffices."
+Does it?  I don't mention most of my service at Grinnell.  "Rebelsky
+serves on the boards of the Wilson Center for Leadership and Innovation,
 the Faulconer Gallery, and the Center for Teaching, Learning, and
-Assessment [9]."  It doesn't mention the musings.  "Rebelsky writes
+Assessment [12]."  It doesn't mention the musings.  "Rebelsky writes
 daily about his life as a faculty member and Grinnellian."  It doesn't
-mention the implications.  "Because of his personality and vocal [11]
+mention the implications.  "Because of his personality and vocal [15]
 commentary, Rebelsky is feared across campus."  Or is that "revered"?
 Maybe just "valued".  Perhaps "ignored".  Maybe I started it wrong.
 "In spite of ... Rebelsky is tolerated ...".  Best not to comment on
 the musings or my reception on campus.
 
-What's that Michelle says?  "Perfect is the enemy of good".  And yes,
-that's obvious.  When you strive for perfection, you don't accept good.
-But that's not what she means.  She means that if you keep trying to make
-something that's good enough perfect, you often end up with something that
-isn't even good enough.
+What's that Michelle says?  "Perfect is the enemy of good".  In the 
+first reading, that's obvious: When you strive for perfection, you don't
+accept good.  But that's not what she means.  She means that if you keep
+trying to make something that's good enough perfect, you often end up
+with something that isn't even good enough.
 
-Perhaps I'll try the other aphorism.  "Close enough for folk", or at least
-for a musing.
+Perhaps I'll try another aphorism.  "Close enough for folk", or at least
+for a musing [16].
+
+In any case, I've submitted it already, so it will stand.  Maybe I'll
+spend more time on the next one.
 
 ---
 
-[1] I forgot to ask [my advisory board](my-advisory-board) first.
+[1] More accurately, I got asked about two weeks ago.  I wrote it this
+week.
 
-[2] Let's see ... "Samuel A. Rebelsky is a Professor of Computer
+[2] I forgot to ask [my advisory board](my-advisory-board) first.
+
+[3] Let's see ... "Samuel A. Rebelsky is a Professor of Computer
 Science at Grinnell College.  'SamR', as his students call him, has
 been at Grinnell since 1997.  (He therefore considers himself part of
-the Grinnell class of 2001.)"
+the Grinnell class of 2001.)"  I've written worse.
 
-[3] And because the Roses, Like Cake [4], That Famous Comedian, Joey, Sarah
-[5], and many others are members of that class.  They shaped my teaching
-identity at Grinnell and I appreciate being part of their class.
+[4] Also because the Roses, Like Cake [5], some famous comedian, Joey,
+that awesome woman from the class of '01 who graduated in three years
+[6], that Pixar guy, the documentary filmmaker from Iowa City, and many
+others are members of that class.  These students shaped my teaching
+identity at Grinnell.  I appreciate being considered part of their class.
 
-[4] Now that I finally understand pronunciation, I want to call him
+[5] Now that I finally understand pronunciation, I want to call him
 "Live Ache".  But I don't think he'd appreciate that.
 
-[5] Also known as "That student who graduated a year early and became
-a Java trainer, effectively doing much of what I did, except with higher
-pay and more travel."  And it seems no matter how much my salary goes
-up, I have a new graduate who makes more than I do.
+[6] Also known as "That student who not only graduated a year early 
+but also became a Java trainer, effectively doing much of what I did,
+except with higher pay [7] and more travel."  
 
-[6] My professional name is "Samuel A. Rebelsky".  You show respect by
+[7] She was the first of many graduates whose starting salary was
+higher than my current salary.  It seems no matter how much my salary
+goes up, I have a new graduate who makes more than I do.
+
+[8] If I'd been really sensible, I would have remembered that I had
+written a biography this past fall and looked at it.
+
+[9] My professional name is "Samuel A. Rebelsky".  You show respect by
 using it.  You show disrespect by assuming that I'm okay with "Sam Rebelsky".
 
-[7] My children would also insist that I use "Professor Rebelsky 2", since
+[10] My children would also insist that I use "Professor Rebelsky 2", since
 my mother was "Professor Rebelsky" first.
 
-[8] Yes, I realize that "Rebelsky" and "Samuel" have the same number of
+[11] Yes, I realize that "Rebelsky" and "Samuel" have the same number of
 syllables.  
 
-[9] I hate the commas in CTLA [10].   They require that I either have to put it
+[12] I hate the commas in CTLA [14].   They require that I either have to put it
 at the end of a list or separate the items of the list with semicolons.
 
-[10] Yes, I know that they are necessary.  But couldn't we have just
+[14] Yes, I know that they are necessary.  But couldn't we have just
 called it the "Center for Teaching and Learning", like most schools do?
 That way, it could also be a TLA instead of including the letters "TLA".
 
-[11] No it's not ableist in this context.  Or at least I don't think it is.
+[15] No it's not ableist in this context.  Or at least I don't think it is.
+
+[16] Or "close enough for alumni college".
 
 ---
 
-*Version 0.9 of 2018-05-02.*
+*Version 1.0 of 2018-05-03.*
